--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <div class="flex items-center">
                             <div class="mr-4"><i data-feather="music" class="w-10 h-10 text-main"></i></div>
                             <div class="flex-1">
-                                <h2 class="text-2xl font-bold text-main">Trilha Sonora do Bardo</h2>
-                                <p class="text-sm">Incorpore sua playlist aqui!</p>
+                                <h2 class="text-2xl font-bold text-main">Pura nata dos raps de anime x_x</h2>
+                                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6FbJ7rwQHsP30lCtjBIcht?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                             </div>
                              <a href="#" class="ml-4 p-3 bg-teal-900 rounded-full hover:bg-teal-800 transition-colors">
                                 <i data-feather="play" class="w-6 h-6 text-main"></i>
