--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                         <h2 class="text-2xl font-bold text-main mb-3 border-b-2 border-accent pb-2">Informações</h2>
                         <div id="personal-info" class="grid grid-cols-2 gap-4 mt-4 text-center"></div>
                     </section>
+                    <section class="card rounded-2xl p-6 hidden-section" style="--delay: 0.4s;">
+                        <h2 class="text-2xl font-bold text-main mb-3 border-b-2 border-accent pb-2">Curiosidades</h2>
+                        <ul id="curiosities-list" class="list-disc list-inside space-y-2 mt-4"></ul>
+                    </section>
                 </div>
 
                 <!-- Coluna Direita -->
@@ -59,16 +63,12 @@
                         <h2 class="text-2xl font-bold text-main mb-3 border-b-2 border-accent pb-2">Meus Favoritos</h2>
                         <div id="favorites-grid" class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-4"></div>
                     </section>
-                    <section class="card rounded-2xl p-6 hidden-section" style="--delay: 0.4s;">
-                        <h2 class="text-2xl font-bold text-main mb-3 border-b-2 border-accent pb-2">Curiosidades</h2>
-                        <ul id="curiosities-list" class="list-disc list-inside space-y-2 mt-4"></ul>
-                    </section>
                     <section class="card rounded-2xl p-6 hidden-section" style="--delay: 0.5s;">
                         <div class="flex items-center">
                             <div class="mr-4"><i data-feather="music" class="w-10 h-10 text-main"></i></div>
                             <div class="flex-1">
-                                <h2 class="text-2xl font-bold text-main">Pura nata dos raps de anime x_x</h2>
-                                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6FbJ7rwQHsP30lCtjBIcht?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                <h2 class="text-2xl font-bold text-main">Rap de anime :3</h2>
+                                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6FbJ7rwQHsP30lCtjBIcht?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                             </div>
                              <a href="#" class="ml-4 p-3 bg-teal-900 rounded-full hover:bg-teal-800 transition-colors">
                                 <i data-feather="play" class="w-6 h-6 text-main"></i>
